[package]
name = "xhinobi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
base64 = "0.21"
tempfile = "3.8"
regex = "1.10"
anyhow = "1.0"
tree-sitter = "0.22"
tree-sitter-bash = "0.21"
tree-sitter-go = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-json = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-php = "0.22.0"
tree-sitter-lua = "0.1.0"
tree-sitter-dart = "0.0.4"
